overlays/monitor/central-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: prometheus-remote
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prometheus
    secretName: my-secret
  rules:
  - host: prometheus.digitalinfo.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
        path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
